// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expressions valid concat 1`] = `
Object {
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "concat",
}
`;

exports[`Expressions valid concat with operation 1`] = `
Object {
  "ops": Array [
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "concat",
    },
    Object {
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            4,
            1,
          ],
          "source": Object {
            "index": 3,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "concat",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid divide 1`] = `
Object {
  "ops": Array [
    "/",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid divide, simplify to fraction 1`] = `
Object {
  "ops": Array [
    "/",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        6,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid divide, simplify to integer 1`] = `
Object {
  "ops": Array [
    "/",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        6,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid implicit multiplication (a)(b) 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
    Object {
      "ops": Array [
        "-",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            4,
            1,
          ],
          "source": Object {
            "index": 3,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid implicit multiplication (a)b 1`] = `
Object {
  "ops": Array [
    "*",
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid implicit multiplication a(b) 1`] = `
Object {
  "ops": Array [
    "+",
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "-",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            4,
            1,
          ],
          "source": Object {
            "index": 3,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid interm multiple 1`] = `
Object {
  "ops": Array [
    "/",
  ],
  "source": null,
  "terms": Array [
    Object {
      "ops": Array [
        "+",
      ],
      "source": Object {
        "index": 0,
        "type": "interm",
      },
      "terms": Array [
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
    Object {
      "ops": Array [
        "-",
      ],
      "source": Object {
        "index": 1,
        "type": "interm",
      },
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            4,
            1,
          ],
          "source": Object {
            "index": 3,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid interm nested 1`] = `
Object {
  "ops": Array [
    "/",
  ],
  "source": null,
  "terms": Array [
    Object {
      "ops": Array [
        "+",
      ],
      "source": Object {
        "index": 0,
        "type": "interm",
      },
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "ops": Array [],
          "source": Object {
            "index": 1,
            "type": "interm",
          },
          "terms": Array [
            Object {
              "ops": Array [
                "*",
              ],
              "source": Object {
                "index": 0,
                "type": "interm",
              },
              "terms": Array [
                Object {
                  "number": Array [
                    2,
                    1,
                  ],
                  "source": Object {
                    "index": 1,
                    "type": "start",
                  },
                  "type": "number",
                },
                Object {
                  "number": Array [
                    3,
                    1,
                  ],
                  "source": Object {
                    "index": 2,
                    "type": "start",
                  },
                  "type": "number",
                },
              ],
              "type": "op",
            },
          ],
          "type": "op",
        },
      ],
      "type": "op",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid interm single 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "+",
      ],
      "source": Object {
        "index": 0,
        "type": "interm",
      },
      "terms": Array [
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid long product and quotient 1`] = `
Object {
  "ops": Array [
    "*",
    "/",
    "/",
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        5,
        1,
      ],
      "source": Object {
        "index": 4,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid long sum and difference 1`] = `
Object {
  "ops": Array [
    "+",
    "-",
    "-",
    "+",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        5,
        1,
      ],
      "source": Object {
        "index": 4,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid minus 1`] = `
Object {
  "ops": Array [
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid number 1`] = `
Object {
  "number": Array [
    2,
    1,
  ],
  "source": Object {
    "index": 0,
    "type": "start",
  },
  "type": "number",
}
`;

exports[`Expressions valid parentheses * + 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid parentheses + * 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid parentheses nested 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "-",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "ops": Array [
            "+",
          ],
          "source": null,
          "terms": Array [
            Object {
              "number": Array [
                4,
                1,
              ],
              "source": Object {
                "index": 3,
                "type": "start",
              },
              "type": "number",
            },
            Object {
              "number": Array [
                1,
                1,
              ],
              "source": Object {
                "index": 0,
                "type": "start",
              },
              "type": "number",
            },
          ],
          "type": "op",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid parentheses nested unnecessary 1 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "ops": Array [
            "-",
          ],
          "source": null,
          "terms": Array [
            Object {
              "number": Array [
                4,
                1,
              ],
              "source": Object {
                "index": 3,
                "type": "start",
              },
              "type": "number",
            },
            Object {
              "number": Array [
                1,
                1,
              ],
              "source": Object {
                "index": 0,
                "type": "start",
              },
              "type": "number",
            },
          ],
          "type": "op",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid parentheses nested unnecessary 2 1`] = `
Object {
  "ops": Array [
    "+",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "-",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "ops": Array [
            "*",
          ],
          "source": null,
          "terms": Array [
            Object {
              "number": Array [
                4,
                1,
              ],
              "source": Object {
                "index": 3,
                "type": "start",
              },
              "type": "number",
            },
            Object {
              "number": Array [
                1,
                1,
              ],
              "source": Object {
                "index": 0,
                "type": "start",
              },
              "type": "number",
            },
          ],
          "type": "op",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid parentheses nested very unnecessary 1 1`] = `
Object {
  "ops": Array [
    "+",
    "+",
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        5,
        1,
      ],
      "source": Object {
        "index": 4,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        6,
        1,
      ],
      "source": Object {
        "index": 5,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "ops": Array [
            "-",
          ],
          "source": null,
          "terms": Array [
            Object {
              "number": Array [
                4,
                1,
              ],
              "source": Object {
                "index": 3,
                "type": "start",
              },
              "type": "number",
            },
            Object {
              "number": Array [
                1,
                1,
              ],
              "source": Object {
                "index": 0,
                "type": "start",
              },
              "type": "number",
            },
          ],
          "type": "op",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid plus 1`] = `
Object {
  "ops": Array [
    "+",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid precedence * + 1`] = `
Object {
  "ops": Array [
    "*",
    "+",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid precedence + * 1`] = `
Object {
  "ops": Array [
    "+",
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid precedence / - 1`] = `
Object {
  "ops": Array [
    "/",
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid precedence - / 1`] = `
Object {
  "ops": Array [
    "-",
    "/",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid rules: all at once 1`] = `
Object {
  "ops": Array [
    "*",
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "concat",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid rules: forbid concat 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "ops": Array [
            "+",
          ],
          "source": Object {
            "index": 0,
            "type": "interm",
          },
          "terms": Array [
            Object {
              "number": Array [
                1,
                1,
              ],
              "source": Object {
                "index": 0,
                "type": "start",
              },
              "type": "number",
            },
            Object {
              "number": Array [
                3,
                1,
              ],
              "source": Object {
                "index": 2,
                "type": "start",
              },
              "type": "number",
            },
          ],
          "type": "op",
        },
        Object {
          "number": Array [
            4,
            1,
          ],
          "source": Object {
            "index": 3,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid rules: forbid ops 1`] = `
Object {
  "ops": Array [
    "+",
    "+",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "ops": Array [
        "+",
      ],
      "source": Object {
        "index": 0,
        "type": "interm",
      },
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            3,
            1,
          ],
          "source": Object {
            "index": 2,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid rules: forbid parens 1`] = `
Object {
  "ops": Array [
    "+",
    "*",
    "+",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        1,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid rules: op limit 1`] = `
Object {
  "ops": Array [
    "/",
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "concat",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid rules: single ops 1`] = `
Object {
  "ops": Array [
    "*",
    "-",
  ],
  "source": null,
  "terms": Array [
    Object {
      "ops": Array [
        "+",
      ],
      "source": null,
      "terms": Array [
        Object {
          "number": Array [
            2,
            1,
          ],
          "source": Object {
            "index": 1,
            "type": "start",
          },
          "type": "number",
        },
        Object {
          "number": Array [
            1,
            1,
          ],
          "source": Object {
            "index": 0,
            "type": "start",
          },
          "type": "number",
        },
      ],
      "type": "op",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 2,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        4,
        1,
      ],
      "source": Object {
        "index": 3,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;

exports[`Expressions valid times 1`] = `
Object {
  "ops": Array [
    "*",
  ],
  "source": null,
  "terms": Array [
    Object {
      "number": Array [
        2,
        1,
      ],
      "source": Object {
        "index": 0,
        "type": "start",
      },
      "type": "number",
    },
    Object {
      "number": Array [
        3,
        1,
      ],
      "source": Object {
        "index": 1,
        "type": "start",
      },
      "type": "number",
    },
  ],
  "type": "op",
}
`;
